--- a/cli/pubspec.yaml
+++ b/cli/pubspec.yaml
@@ -1,15 +1,15 @@
 name: cli
-description: A sample command-line application.
+description: reset-cli is a powerfull package that allow you to reset your linux system.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/nuageeee/reset-linux
 
 environment:
   sdk: ^3.5.3
 
-# Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
     os: ^1.0.0
+    commander_ui: ^2.0.0
+    args: ^2.6.0
 
 dev_dependencies:
   lints: ^4.0.0
